<resources>
    <string name="app_name">Trainee Share</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="LoginImageView">LoginPageLogo</string>
    <string name="register_here">Register Here</string>
    <string name="login">Login</string>
    <string name="select_role">Please select a role: </string>
    <string-array name="role">
        <item>Student</item>
        <item>Employer</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_register">Register</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
